--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ Site de venda de produtos e serviços
 <html lang="pt-BR">
 <head>
 
+<meta name="google-site-verification" content="cNKjXDG_mEUcacbgJj2m4pr4pd9Ur2iUkzLDoHgjl6M" />
+
   <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>TENDÊNCIA — Você ainda não viu?</title>
