Enhance index.html with SEO meta tags
Added meta tags for SEO and social media sharing.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@ Site de venda de produtos e serviços
 <!doctype html>
 <html lang="pt-BR">
 <head>
+ <head>
+  <meta charset="UTF-8">
+  <title>Trend — Tendências, Produtos em Alta e Oportunidades Online</title>
+  <meta name="description" content="Descubra tendências, produtos virais, serviços em alta e oportunidades reais para ganhar dinheiro online.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="canonical" href="https://eduardoalvessales.github.io/TREND/">
+
+  <meta property="og:title" content="Trend — Tendências e Produtos em Alta">
+  <meta property="og:description" content="O que está em alta hoje: produtos, serviços e oportunidades reais.">
+  <meta property="og:url" content="https://eduardoalvessales.github.io/TREND/">
+  <meta property="og:type" content="website">
+</head>
 <meta name="google-site-verification" content="cNKjXDG_mEUcacbgJj2m4pr4pd9Ur2iUkzLDoHgjl6M" />
 
   <meta charset="utf-8" />
