Revise title and meta description in index.html
Updated title and meta tags for SEO optimization.

--- a/index.html
+++ b/index.html
@@ -6,21 +6,34 @@ Site de venda de produtos e serviços
 <head>
  <head>
   <meta charset="UTF-8">
-  <title>Trend — Tendências, Produtos em Alta e Oportunidades Online</title>
-  <meta name="description" content="Descubra tendências, produtos virais, serviços em alta e oportunidades reais para ganhar dinheiro online.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <title>TREND – Tendências, Produtos em Alta e Oportunidades Online</title>
+
+  <meta name="description" content="Descubra tendências do momento, produtos em alta, serviços digitais e oportunidades online. O TREND mostra o que está viralizando antes de todo mundo.">
+
+  <meta name="keywords" content="tendências, produtos em alta, novidades, oportunidades online, afiliados, lançamentos, trend">
+
+  <meta name="author" content="TREND">
+
+  <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://eduardoalvessales.github.io/TREND/">
 
-  <meta property="og:title" content="Trend — Tendências e Produtos em Alta">
-  <meta property="og:description" content="O que está em alta hoje: produtos, serviços e oportunidades reais.">
-  <meta property="og:url" content="https://eduardoalvessales.github.io/TREND/">
-  <meta property="og:type" content="website">
-</head>
-<meta name="google-site-verification" content="cNKjXDG_mEUcacbgJj2m4pr4pd9Ur2iUkzLDoHgjl6M" />
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="cNKjXDG_mEUcacbgJj2m4pr4pd9Ur2iUkzLDoHgjl6M" />
 
-  <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="TREND – Tendências e Produtos em Alta">
+  <meta property="og:description" content="Veja tendências do momento, produtos virais e oportunidades online antes de todo mundo.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://eduardoalvessales.github.io/TREND/">
+  <meta property="og:image" content="https://eduardoalvessales.github.io/TREND/assets/og-image.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="TREND – Tendências e Produtos em Alta">
+  <meta name="twitter:description" content="Descubra tendências, produtos e oportunidades online.">
+</head>
 <title>TENDÊNCIA — Você ainda não viu?</title>
 <style>
   :root{
