Create tendencias-2026.html with trend insights

--- a/tendencias-2026.html
+++ b/tendencias-2026.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Tendências 2026: O que está crescendo agora | TREND</title>
+  <meta name="description" content="Veja as principais tendências de 2026 em tecnologia, negócios e comportamento. Descubra o que está crescendo e onde estão as oportunidades.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 
+<header>
+  <h1>Tendências em Alta para 2026</h1>
+  <p>As principais mudanças, ideias e oportunidades que estão ganhando força neste ano.</p>
+</header>
+
+<section>
+  <h2>🚀 Inteligência Artificial aplicada ao dia a dia</h2>
+  <p>
+    Em 2026, a inteligência artificial deixou de ser apenas uma ferramenta técnica
+    e passou a fazer parte da rotina de pessoas e empresas. Aplicações simples,
+    automações e assistentes inteligentes dominam o mercado.
+  </p>
+</section>
+
+<section>
+  <h2>💼 Serviços Digitais Personalizados</h2>
+  <p>
+    Pequenos serviços digitais, personalizados para nichos específicos,
+    estão crescendo rapidamente. Desde consultorias até automações sob medida.
+  </p>
+</section>
+
+<section>
+  <h2>🛒 Produtos Inteligentes e Conectados</h2>
+  <p>
+    Produtos que se conectam a aplicativos, usam sensores ou facilitam a vida
+    das pessoas estão entre os mais procurados em 2026.
+  </p>
+</section>
+
+<footer>
+  <p>© 2026 TREND — Todos os direitos reservados.</p>
+</footer>
+
+</body>
+</html>
