Add link to 'Tendências 2026' in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ ral{--accent:#00d1ff}
 </style>
 </head>
 <body>
-
+<a href="tendencias-2026.html">🔥 Tendências 2026</a>
 <header>
   <img src="assets/logo.png" alt="logo" class="logo" id="logoImg" />
   <div class="brand">
