--- a/index.html
+++ b/index.html
@@ -3,87 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>TREND – Tendências, Produtos e Oportunidades</title>
-
-  <meta name="description" content="Descubra tendências, produtos em alta e oportunidades digitais. O TREND mostra o que está crescendo antes de virar moda.">
-  <meta name="keywords" content="tendências, produtos em alta, oportunidades online, negócios digitais">
-  <meta name="author" content="TREND">
-  <meta name="robots" content="index, follow">
-
-  <link rel="canonical" href="https://eduardoalvessales.github.io/TREND/">
-
-  <meta property="og:title" content="TREND – Tendências e Produtos em Alta">
-  <meta property="og:description" content="Descubra tendências e oportunidades que estão crescendo agora.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://eduardoalvessales.github.io/TREND/">
-
+  <title>TREND - Tendências e Produtos</title>
+  <meta name="description" content="Trend: últimas tendências, produtos e novidades em afiliados e serviços.">
+  <link rel="canonical" href="https://eduardoalvessales.github.io/TREND-/">
   <style>
-    :root{
-      --bg:#0b0b0b;
-      --text:#f5f5f5;
-      --accent:#00d1b2;
-      --card:#151515;
-    }
-    *{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
-    body{margin:0;background:var(--bg);color:var(--text);}
-    header{padding:20px;border-bottom:1px solid #222;display:flex;justify-content:space-between;align-items:center}
-    header h1{margin:0;font-size:22px}
-    nav a{color:var(--text);margin-left:15px;text-decoration:none;font-weight:600}
-    nav a:hover{color:var(--accent)}
-    main{padding:30px;max-width:1100px;margin:auto}
-    .hero{background:#121212;padding:30px;border-radius:14px;margin-bottom:30px}
-    .hero h2{margin-top:0}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px}
-    .card{background:var(--card);padding:18px;border-radius:12px}
-    .card a{color:var(--accent);text-decoration:none;font-weight:600}
-    footer{text-align:center;padding:25px;opacity:.6}
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f5f5f5; color:#333; }
+    header { background:#222; color:#fff; padding:15px 20px; }
+    header h1 { margin:0; font-size:24px; }
+    nav ul { list-style:none; margin:0; padding:0; display:flex; gap:15px; }
+    nav ul li { display:inline; }
+    nav ul li a { color:#fff; text-decoration:none; }
+    main { padding:20px; max-width:1200px; margin:0 auto; }
+    .section-title { font-size:22px; margin-bottom:15px; }
+    .produtos { display:flex; flex-wrap:wrap; gap:20px; }
+    .produto-card { background:#fff; padding:15px; border-radius:6px; width:calc(33% - 20px); box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+    .produto-card img { width:100%; height:auto; border-radius:4px; }
+    .produto-card h3 { margin:10px 0 5px; font-size:18px; }
+    .produto-card p { margin:0 0 10px; }
+    .produto-card a { display:inline-block; background:#ff6600; color:#fff; padding:8px 12px; border-radius:4px; text-decoration:none; }
+    footer { background:#222; color:#fff; text-align:center; padding:15px; margin-top:30px; }
+    @media (max-width:900px){ .produto-card { width:calc(50% - 20px); } }
+    @media (max-width:600px){ .produto-card { width:100%; } nav ul { flex-direction:column; gap:10px; } }
   </style>
 </head>
-
 <body>
 
 <header>
   <h1>TREND</h1>
   <nav>
-    <a href="index.html">Início</a>
-    <a href="tendencias-2026.html">Tendências 2026</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="contato.html">Contato</a></li>
+      <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
+    </ul>
   </nav>
 </header>
 
 <main>
-  <section class="hero">
-    <h2>O que está crescendo agora</h2>
-    <p>
-      O TREND mostra tendências, produtos e oportunidades digitais antes de virarem moda.
-      Descubra o que está chamando atenção em 2026.
-    </p>
+  <section>
+    <h2 class="section-title">Produtos em Destaque</h2>
+    <div class="produtos" id="produtos-container">
+      <!-- Cards serão gerados automaticamente aqui -->
+    </div>
   </section>
 
-  <section class="grid">
-    <div class="card">
-      <h3>🔥 Tendências 2026</h3>
-      <p>Veja as principais tendências que estão ganhando força agora.</p>
-      <a href="tendencias-2026.html">Acessar →</a>
-    </div>
-
-    <div class="card">
-      <h3>🛍️ Produtos em Alta</h3>
-      <p>Produtos que estão vendendo e crescendo rapidamente.</p>
-      <a href="#">Em breve</a>
-    </div>
-
-    <div class="card">
-      <h3>💻 Serviços Digitais</h3>
-      <p>Serviços online, ferramentas e oportunidades digitais.</p>
-      <a href="#">Em breve</a>
-    </div>
+  <section>
+    <h2 class="section-title">Novidades e Tendências</h2>
+    <p>Aqui você poderá adicionar posts, artigos e novidades do momento para engajar visitantes e direcionar para produtos de afiliados.</p>
   </section>
 </main>
 
 <footer>
-  © 2026 TREND — Todos os direitos reservados.
+  <p>&copy; 2026 TREND - Todos os direitos reservados</p>
 </footer>
+
+<script>
+  // ================================
+  // JSON com 12 produtos populares Hotmart
+  // ================================
+  const produtos = [
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Curso+Finanças",
+      "nome": "Curso de Finanças e Investimentos",
+      "preco": "R$199,90",
+      "link": "https://hotm.art/seu-link-afiliado1"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Marketing+Digital",
+      "nome": "Treinamento de Marketing Digital",
+      "preco": "R$149,90",
+      "link": "https://hotm.art/seu-link-afiliado2"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Produtividade",
+      "nome": "Curso de Produtividade e Gestão de Tempo",
+      "preco": "R$99,90",
+      "link": "https://hotm.art/seu-link-afiliado3"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Emagrecimento",
+      "nome": "Programa de Emagrecimento Saudável",
+      "preco": "R$129,90",
+      "link": "https://hotm.art/seu-link-afiliado4"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Inglês",
+      "nome": "Aprenda Inglês do Zero",
+      "preco": "R$179,90",
+      "link": "https://hotm.art/seu-link-afiliado5"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Concursos",
+      "nome": "Aulas Preparatórias para Concurso",
+      "preco": "R$249,90",
+      "link": "https://hotm.art/seu-link-afiliado6"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Violão",
+      "nome": "Curso de Violão do Zero",
+      "preco": "R$89,90",
+      "link": "https://hotm.art/seu-link-afiliado7"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Culinária",
+      "nome": "Curso de Culinária Prática",
+      "preco": "R$79,90",
+      "link": "https://hotm.art/seu-link-afiliado8"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Desenvolvimento+Pessoal",
+      "nome": "Treinamento de Desenvolvimento Pessoal",
+      "preco": "R$139,90",
+      "link": "https://hotm.art/seu-link-afiliado9"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Fotografia",
+      "nome": "Curso de Fotografia para Iniciantes",
+      "preco": "R$109,90",
+      "link": "https://hotm.art/seu-link-afiliado10"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Blogging",
+      "nome": "Curso de Blogging e Conteúdo",
+      "preco": "R$129,90",
+      "link": "https://hotm.art/seu-link-afiliado11"
+    },
+    {
+      "imagem": "https://via.placeholder.com/300x200?text=Hábitos+de+Sucesso",
+      "nome": "Ebook de Hábitos de Sucesso",
+      "preco": "R$49,90",
+      "link": "https://hotm.art/seu-link-afiliado12"
+    }
+  ];
+
+  // ================================
+  // Gerar cards automaticamente
+  // ================================
+  const container = document.getElementById('produtos-container');
+  produtos.forEach(produto => {
+    const card = document.createElement('div');
+    card.className = 'produto-card';
+    card.innerHTML = `
+      <img src="${produto.imagem}" alt="${produto.nome}">
+      <h3>${produto.nome}</h3>
+      <p>Preço: ${produto.preco}</p>
+      <a href="${produto.link}" target="_blank">Comprar Agora</a>
+    `;
+    container.appendChild(card);
+  });
+</script>
 
 </body>
 </html>
